add sweet alert and update Controller.php

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/css/app.css": "/css/app.css",
     "/js/jquery.toast.min.js": "/js/jquery.toast.min.js",
     "/js/lightgallery.min.js": "/js/lightgallery.min.js",
-    "/js/summernote.js": "/js/summernote.js"
+    "/js/summernote.js": "/js/summernote.js",
+    "/js/sweetalert.min.js": "/js/sweetalert.min.js"
 }
