--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "jquery-toast-plugin": "^1.3.2",
         "lightgallery": "^1.6.8",
         "moment": "^2.24.0",
-        "summernote": "^0.8.10"
+        "summernote": "^0.8.10",
+        "sweetalert": "^2.1.2"
     }
 }
