--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "datatables.net-bs": "^1.10.19",
         "font-awesome": "^4.7.0",
         "icheck": "^1.0.2",
+        "jquery-bar-rating": "^1.2.2",
         "jquery-toast-plugin": "^1.3.2",
         "lightgallery": "^1.6.8",
         "moment": "^2.24.0",
